--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,28 +1,28 @@
 trigger:
-- master
-- development
+  - main
+  - development
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: "ubuntu-latest"
 
 variables:
-  buildConfiguration: 'Release'
+  buildConfiguration: "Release"
 
 steps:
-- task: UseDotNet@2
-  inputs:
-    packageType: 'sdk'
-    version: '3.1.300'
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'restore'
-    feedsToUse: 'select'
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    arguments: '--configuration $(buildConfiguration)'
-    projects: '**/*.csproj'
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'test'
-    projects: '**/*.csproj'
+  - task: UseDotNet@2
+    inputs:
+      packageType: "sdk"
+      version: "3.1.300"
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: "restore"
+      feedsToUse: "select"
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: "build"
+      arguments: "--configuration $(buildConfiguration)"
+      projects: "**/*.csproj"
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: "test"
+      projects: "**/*.csproj"
