Updated azure-pipelines.yml for nuget packaging.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,11 @@ steps:
     inputs:
       command: "test"
       projects: "**/*.csproj"
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'pack'
+      packagesToPack: '**/*.csproj'
+      versioningScheme: 'byPrereleaseNumber'
+      majorVersion: '1'
+      minorVersion: '0'
+      patchVersion: '0'
