--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,9 @@ steps:
       majorVersion: '1'
       minorVersion: '0'
       patchVersion: '0'
+  - task: NuGetCommand@2
+    inputs:
+      command: 'push'
+      packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+      nuGetFeedType: 'internal'
+      publishVstsFeed: '9566de23-5df9-4be2-b676-8ac0e1cbd609/45a7e446-1e14-44f0-a847-4c60611a0413'
