--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,29 +10,34 @@ variables:
 
 steps:
   - task: UseDotNet@2
-    displayName: "select sdk"
+    displayName: "SDK"
     inputs:
       packageType: "sdk"
       version: "3.1.300"
   - task: DotNetCoreCLI@2
-    displayName: "dotnet restore"
+    displayName: "Restore"
     inputs:
       command: "restore"
       feedsToUse: "select"
   - task: DotNetCoreCLI@2
-    displayName: "dotnet build"
+    displayName: "Build"
     inputs:
       command: "build"
       arguments: "--configuration $(buildConfiguration)"
       projects: "**/*.csproj"
   - task: DotNetCoreCLI@2
-    displayName: "dotnet test"
+    displayName: "Test"
     inputs:
       command: "test"
-      arguments: "/p:CollectCoverage=true"
+      arguments: "--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura"
       projects: "**/*.csproj"
+  - task: PublishCodeCoverageResults@1
+    displayName: "Publish Coverage"
+    inputs:
+      codeCoverageTool: 'Cobertura'
+      summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
   - task: DotNetCoreCLI@2
-    displayName: "dotnet pack"
+    displayName: "Pack"
     inputs:
       command: 'pack'
       packagesToPack: '**/*.csproj'
@@ -41,7 +46,7 @@ steps:
       minorVersion: '0'
       patchVersion: '0'
   - task: NuGetCommand@2
-    displayName: "nuget push"
+    displayName: "Push"
     inputs:
       command: 'push'
       packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
