Exposed an action to configure the HttpClientBuilder that is returned when registering the TokenClient class in the service collection via the AddHttpClient extension method. This can be used to add a retry policy to the injected HttpClient to add resiliancy.

--- a/AccessTokenClient.Extensions/AccessTokenClient.Extensions.csproj
+++ b/AccessTokenClient.Extensions/AccessTokenClient.Extensions.csproj
@@ -20,12 +20,14 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.1.1" />
     <PackageReference Include="Scrutor" Version="3.2.1" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.1" />
     <PackageReference Include="Scrutor" Version="3.2.1" />
   </ItemGroup>
 
