--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,23 +1,19 @@
-name: .NET Core
-
+name: .NET Package Workflow
 on:
   push:
-    branches: [ development ]
+    branches: [ feature/*, development ]
   pull_request:
-    branches: [ development ]
-
+    branches: [ development, main ]
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET Core
+    - name: SDK Version
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.101
-    - name: Install dependencies
+    - name: Restore
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
