--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,9 +1,9 @@
 name: .NET Package Workflow
 on:
   push:
-    branches: [ feature/*, development ]
+    branches: [development, main]
   pull_request:
-    branches: [ development, main ]
+    branches: [feature/*, development]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,3 +19,5 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+    - name: Pack
+      run: dotnet nuget push **/*.nupkg -s https://nuget.pkg.github.com/wapplegate/index.json
