--- a/Projects/TestingFivePointZeroApplication/TestingFivePointZeroApplication.csproj
+++ b/Projects/TestingFivePointZeroApplication/TestingFivePointZeroApplication.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\AccessTokenClient.Extensions\AccessTokenClient.Extensions.csproj" />
     <ProjectReference Include="..\..\AccessTokenClient\AccessTokenClient.csproj" />
   </ItemGroup>
