--- a/AccessTokenClient/AccessTokenClient.csproj
+++ b/AccessTokenClient/AccessTokenClient.csproj
@@ -1,24 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0</TargetFrameworks>
-    <Authors>William Applegate</Authors>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <Version>1.0.0</Version>
-    <Description>This library provides a token client that can be used when you need to make client_credentials OAuth requests. Instead of re-writing the same token clients over and over again in your services, you can use this package to make those token requests easily. The package also includes the ability to cache access tokens so they can be reused.</Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/wapplegate/AccessTokenClient</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/wapplegate/AccessTokenClient</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
+	<TargetFrameworks>netstandard2.0;netcoreapp3.1;net5.0</TargetFrameworks>
+	<LangVersion>latest</LangVersion>
+	<Version>1.0.0</Version>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<Authors>William Applegate</Authors>
+	<Description>This library provides a token client that can be used when you need to make client credentials OAuth requests. Instead of re-writing the same token clients over and over again in your services, you can use this package to make those token requests easily. The package also includes the ability to cache access tokens so they can be reused.</Description>
+	<DebugType>embedded</DebugType>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
+	<PublishRepositoryUrl>true</PublishRepositoryUrl>
+	<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<PackageProjectUrl>https://github.com/wapplegate/AccessTokenClient</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/wapplegate/AccessTokenClient</RepositoryUrl>
+	<RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TF_BUILD)' == 'true'">
