--- a/Projects/Console/Console.csproj
+++ b/Projects/Console/Console.csproj
@@ -1,10 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1" />
   </ItemGroup>
@@ -13,6 +16,5 @@
     <ProjectReference Include="..\..\AccessTokenClient.Extensions\AccessTokenClient.Extensions.csproj" />
     <ProjectReference Include="..\..\AccessTokenClient\AccessTokenClient.csproj" />
   </ItemGroup>
-
 
 </Project>
