--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
     displayName: "SDK"
     inputs:
       packageType: "sdk"
-      version: "6.0.100"
+      version: "6.0.100-rc.2.21505.57"
   - task: DotNetCoreCLI@2
     displayName: "Restore"
     inputs:
