--- a/AccessTokenClient.Extensions/AccessTokenClient.Extensions.csproj
+++ b/AccessTokenClient.Extensions/AccessTokenClient.Extensions.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+    <EnablePackageValidation>true</EnablePackageValidation>
+    <Nullable>enable</Nullable>
     <Version>1.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>William Applegate</Authors>
