--- a/Projects/TestingWebApplication/Properties/launchSettings.json
+++ b/Projects/TestingWebApplication/Properties/launchSettings.json
@@ -1,13 +1,15 @@
-{
+﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IdentityServer": {
+    "TestingWebApplication": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5114",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:44303"
+      }
     }
   }
 }
